syntax = "proto3";
package m2g.pb;

enum ObjectType {
    NO_OBJECT = 0;
    PLAYER = 1;
    SKELETON = 2;
    CASTLE_FINISH_POINT = 3;
    CUTEOPUS = 4;
    MACHINE_GUN_ITEM_DROP = 5;
    EXPLOSIVE_ITEM_DROP = 6;
    LONG_SWORD_ITEM_DROP = 7;
    AXE_ITEM_DROP = 8;

    BUSH_01 = 1001;
    FLOWER_ORANGE_02 = 1002;
    FLOWER_PINK_03 = 1003;
    FLOWER_WHITE_05 = 1004;
    PINE_01 = 1005;
    PINE_DEAD_02 = 1006;
    ROCK_03 = 1007;
    TREE_03 = 1008;
    TREE_DEAD_03 = 1009;
    FENCE_HORIZONTAL = 1010;
    FENCE_VERTICAL = 1011;

    SPIKES = 1101;
}
